--- a/galeria.html
+++ b/galeria.html
@@ -10,11 +10,11 @@
   <title>LÍNEA AMARILLA</title>
 </head>
 <body class="body">
-  <h1>Partido Libertario (Línea Amarilla)</h1>
+  <h1 class="amarillo">PL (Línea Amarilla)</h1>
   <div class="espacio"></div>
   
   <div class="contenedor">
-    <a class="menu" href="#"><img src="img/pelucaSF.png" alt="peluca de milei"></a>
+    <a class="menu" href="#"><img src="img/LA.jpeg" alt="peluca de milei"></a>
     <ul class="desplegable">
       <li><a class="opcion" href="index.html">Inicio</a></li>
       <li><a class="opcion" href="redes.html">Redes Sociales</a></li>
@@ -25,6 +25,11 @@
   <div class="divisor">VIVA LA LIBERTAD, CARAJO!</div>
 
   <div class="fotosContents">
+    <img class="fotos foto1" src="img/tres.jpeg" alt="javier milei festejando">
+    <img class="fotos foto1" src="img/victoria.jpeg" alt="javier milei festejando">
+    <img class="fotos foto1" src="img/salon.jpeg" alt="javier milei festejando">
+    <img class="fotos foto1" src="img/juventud.jpeg" alt="javier milei festejando">
+    <img class="fotos foto1" src="img/asado.jpeg" alt="javier milei festejando">
     <img class="fotos foto1" src="img/milei festejando.jpg" alt="javier milei festejando">
     <img class="fotos" src="img/milei presidente.jpg" alt="javier milei presidente 2023">
     <img class="fotos fotoG" src="img/milei 2023.jpg" alt="javier milei presidente 2023">
