--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <video autoplay muted loop id="video" ><source src="img/bandera.mp4" type="video/mp4"></video>
-  <h1>Partido Libertario (Línea Amarilla)</h1>
+  <h1>PL (Línea Amarilla)</h1>
   <div class="contenedor">
-    <a class="menu" href="#"><img src="img/pelucaSF.png" alt="peluca de milei"></a>
+    <a class="menu" href="#"><img src="img/LA.jpeg" alt="peluca de milei"></a>
     <ul class="desplegable">
       <li><a class="opcion" href="index.html">Inicio</a></li>
       <li><a class="opcion" href="redes.html">Redes Sociales</a></li>
